UIEXT-2758: Remove class name from update results
UIEXT-2758 (Remove java class names from ui schema)